# hbr-ew-scale-repro

./: .gitignore  CHANGELOG.md  CITATION.cff  README.md  RELEASE_v1_0_0.md  pyproject.toml
.github/workflows/: reproduce.yml
data/: SHA256SUMS  ew_scale_inputs.json  g_consensus.json  g_path_closed_form.json  g_path_msbar.json  g_path_s4_heat_kernel.json  g_path_sigma_cutoff.json  saddle_blindness_witness.json  two_loop_closure.json  v5_g_consensus.json
outputs/: eta_S_high_precision_audit.json  expected_output.txt  scan_S_bounce_landing.json  verify_S_bounce_from_KQ_closed_potential.json  verify_S_bounce_structural_rational.json  verify_T_parity_from_chirality_pairing.json  verify_T_star_equals_gamma_vacuum.json
paper/: abstract_short.tex  manuscript.aux  manuscript.out  manuscript.tex
paper/tables/: tab_S_bounce_audit.tex
src/: audit_eta_S_high_precision.py  make_S_bounce_audit_table_tex.py  make_fig_v5_g_paths.py  make_figures.py  make_hashes.py  recompute_ew_scale.py  scan_S_bounce_landing.py  verify_S_bounce_from_KQ_closed_potential.py  verify_S_bounce_structural_rational.py  verify_T_parity_from_chirality_pairing.py  verify_T_star_equals_gamma_vacuum.py
tests/: test_T_star_and_T_parity_derivations.py  test_falsification.py  test_figures.py  test_g_consensus.py  test_recompute_ew_scale.py  test_saddle_blindness_protocol.py
