[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hbr-ew-scale-repro"
version = "0.1.0"
description = "HBR electroweak-scale reproduction with defect-field two-loop correction on the FL-S^4 bounce background"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Sandro Bucciarelli" }
]
keywords = [
    "electroweak-scale",
    "hierarchy-bridge-relation",
    "two-loop",
    "defect-field",
    "FL-S4-bounce",
    "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/USER/hbr-ew-scale-repro"
Repository = "https://github.com/USER/hbr-ew-scale-repro"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
